# gst-plugins-bad

ext/opencv/: gstcvtracker.cpp  gstcvtracker.h  gstopencv.cpp  meson.build
gst-libs/gst/opencv/: meson.build
